WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47956
[chromium] Fix crash when mousing over scrollview
https://bugs.webkit.org/show_bug.cgi?id=47956
Summary
[chromium] Fix crash when mousing over scrollview
John Abd-El-Malek
Reported
2010-10-19 16:45:51 PDT
[chromium] Fix crash when mousing over scrollview
Attachments
Patch
(7.89 KB, patch)
2010-10-20 00:22 PDT
,
John Abd-El-Malek
fishd
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Abd-El-Malek
Comment 1
2010-10-20 00:22:07 PDT
Created
attachment 71258
[details]
Patch
John Abd-El-Malek
Comment 2
2010-10-20 11:04:37 PDT
Committed
r70153
: <
http://trac.webkit.org/changeset/70153
>
John Abd-El-Malek
Comment 3
2010-10-20 13:42:32 PDT
***
Bug 48003
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug