2010-10-20  John Abd-El-Malek  <jam@chromium.org>

Reviewed by Darin Fisher.

        [chromium] Fix crash when mousing over scrollview
        https://bugs.webkit.org/show_bug.cgi?id=47956

        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::mouseDidMoveOverElement):
        * src/ChromiumBridge.cpp:
        (WebCore::ChromiumBridge::pluginScriptableObject):
        * src/ContextMenuClientImpl.cpp:
        (WebKit::ContextMenuClientImpl::getCustomMenuFromDefaultItems):
        * src/FrameLoaderClientImpl.cpp:
        (WebKit::FrameLoaderClientImpl::redirectDataToPlugin):
        * src/WebPluginContainerImpl.h:
        (WebKit::WebPluginContainerImpl::isPluginContainer):
2010-10-20  John Abd-El-Malek  <jam@chromium.org>

        Reviewed by Darin Fisher.

        [chromium] Fix crash when mousing over scrollview
        https://bugs.webkit.org/show_bug.cgi?id=47956

        Test: plugins/mouse-move-over-plugin-in-frame.html

        * platform/Widget.h:
        (WebCore::Widget::isPluginContainer):
2010-10-20  John Abd-El-Malek  <jam@chromium.org>

        Reviewed by Darin Fisher.

        [chromium] Fix crash when mousing over scrollview
        https://bugs.webkit.org/show_bug.cgi?id=47956

        * plugins/mouse-move-over-plugin-in-frame.html: Added.
        * plugins/mouse-move-over-plugin-in-frame.txt: Added.
        * plugins/resources/mouse-move-over-plugin-in-frame.html: Added.


Canonical link: https://commits.webkit.org/60708@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70153 268f45cc-cd09-0410-ab3c-d52691b4dbfc