WebCore/platform/Widget.h
@@ -227,6 +227,10 @@ public:
     const String edjeThemeRecursive() const;
 #endif
 
+#if PLATFORM(CHROMIUM)
+    virtual bool isPluginContainer() const { return false; }
+#endif
+
     // Virtual methods to convert points to/from the containing ScrollView
     virtual IntRect convertToContainingView(const IntRect&) const;
     virtual IntRect convertFromContainingView(const IntRect&) const;
